Actualización del README y añadido XML
-He cambiado un poco la organización del proyecto.
-He añadido unas instrucciones en el README a seguir de donde está cada parte del proyecto para facilitar la corrección